// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebpackBundleSizeAnalyzerPlugin should generate a report when a relative file path is provided 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "./report.txt",
  "statsOptions": Object {},
}
`;

exports[`WebpackBundleSizeAnalyzerPlugin should generate a report when an absolute file path is provided 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "/absolute/report.txt",
  "statsOptions": Object {},
}
`;

exports[`WebpackBundleSizeAnalyzerPlugin should not generate a report when no file path is provided 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "",
  "statsOptions": Object {},
}
`;

exports[`WebpackBundleSizeAnalyzerPlugin supports providing options for \`Stats.toJson\` 1`] = `
WebpackBundleSizeAnalyzerPlugin {
  "filepath": "./report.txt",
  "statsOptions": Object {
    "warnings": false,
  },
}
`;
